feat: add me trics